--- a/Atividades/Grammar/index.html
+++ b/Atividades/Grammar/index.html
@@ -147,7 +147,7 @@
     </div>
 
     <div id="content">
-        <!-- Dynamic content will be loaded here -->
+        <!-- Conteúdo dinâmico será carregado aqui -->
     </div>
 
     <button class="btn-download" onclick="generatePDF()">Download as PDF</button>
@@ -254,7 +254,7 @@
                         }
                     };
                 } else {
-                    showAlert("No 'en-US' voice found in your speech synthesizer. Please enable English language in your browser's speech synthesizer. For now, the default voice will be used.");
+                                        showAlert("No 'en-US' voice found in your speech synthesizer. Please enable English language in your browser's speech synthesizer. For now, the default voice will be used.");
                     speakText(text, synth.getVoices()[0]);
                 }
             } else {
@@ -402,3 +402,4 @@
 
 </body>
 </html>
+
