--- a/Atividades/Grammar/index.html
+++ b/Atividades/Grammar/index.html
@@ -179,38 +179,52 @@
     let alertDisplayed = false;
 
     function loadTextFile() {
-        const { level, unit } = getLevelAndUnitFromURL();
-        fetch(`../../${level}/${unit}/DataGrammar/texto.txt`)
-            .then(response => response.text())
-            .then(data => {
-                const contentDiv = document.getElementById('content');
-                const lines = data.split('\n');
-                let currentSection = '';
-                let htmlContent = '';
+    const { level, unit } = getLevelAndUnitFromURL();
 
-                lines.forEach(line => {
-                    if (line.startsWith('Title: ')) {
-                        document.getElementById('title').innerText = line.replace('Title: ', '');
-                    } else if (line.startsWith('# ')) {
-                        if (currentSection) {
-                            htmlContent += '</div>';
-                        }
-                        currentSection = line.replace('# ', '');
-                        htmlContent += `<div class="section"><h2>${currentSection}</h2>`;
-                    } else if (line.includes('[Answer:')) {
-                        const [question, answer] = line.split('[Answer:');
-                        const cleanedAnswer = answer.replace(']', '').trim();
-                        htmlContent += `<p>${question.trim()} <button class="show-answer-btn" onclick="handleAnswerClick(this)">Answer</button><span class="answer" style="display:none;">${cleanedAnswer}</span></p>`;
-                        totalAnswers++;
-                    } else {
-                        htmlContent += `<p>${line}</p>`;
+    // Construindo o caminho correto com base no level e unit
+    const filePath = `../../${level}/${unit}/DataGrammar/texto.txt`;
+
+    console.log("Caminho gerado para o arquivo texto.txt:", filePath); // Log do caminho
+
+    fetch(filePath)
+        .then(response => {
+            if (!response.ok) {
+                throw new Error(`Erro ao carregar o arquivo: ${response.statusText}`);
+            }
+            return response.text();
+        })
+        .then(data => {
+            const contentDiv = document.getElementById('content');
+            const lines = data.split('\n');
+            let currentSection = '';
+            let htmlContent = '';
+
+            lines.forEach(line => {
+                if (line.startsWith('Title: ')) {
+                    document.getElementById('title').innerText = line.replace('Title: ', '');
+                } else if (line.startsWith('# ')) {
+                    if (currentSection) {
+                        htmlContent += '</div>';
                     }
-                });
+                    currentSection = line.replace('# ', '');
+                    htmlContent += `<div class="section"><h2>${currentSection}</h2>`;
+                } else if (line.includes('[Answer:')) {
+                    const [question, answer] = line.split('[Answer:');
+                    const cleanedAnswer = answer.replace(']', '').trim();
+                    htmlContent += `<p>${question.trim()} <button class="show-answer-btn" onclick="handleAnswerClick(this)">Answer</button><span class="answer" style="display:none;">${cleanedAnswer}</span></p>`;
+                    totalAnswers++;
+                } else {
+                    htmlContent += `<p>${line}</p>`;
+                }
+            });
 
-                contentDiv.innerHTML = htmlContent + '</div>';
-            })
-            .catch(error => console.error('Error loading the text file:', error));
-    }
+            contentDiv.innerHTML = htmlContent + '</div>';
+        })
+        .catch(error => {
+            console.error('Error loading the text file:', error);
+            alert("Erro ao carregar o arquivo. Verifique a URL ou a estrutura dos diretórios.");
+        });
+}
 
     function handleAnswerClick(button) {
         const answerElement = button.nextElementSibling;
