--- a/Atividades/Grammar/index.html
+++ b/Atividades/Grammar/index.html
@@ -178,14 +178,23 @@
     let clickedAnswers = 0;
     let alertDisplayed = false;
 
-    function loadTextFile() {
+   function loadTextFile() {
     const { level, unit } = getLevelAndUnitFromURL();
+
+    // Verificando a URL completa
+    console.log("Parâmetros da URL - Level:", level, "Unit:", unit);
 
     // Construindo o caminho correto com base no level e unit
     const filePath = `../../${level}/${unit}/DataGrammar/texto.txt`;
 
-    console.log("Caminho gerado para o arquivo texto.txt:", filePath); // Log do caminho
+    // Log para o caminho gerado
+    console.log("Caminho gerado para o arquivo texto.txt:", filePath);
 
+    // Verificando o caminho absoluto em relação à URL atual
+    const absolutePath = new URL(filePath, window.location.href).href;
+    console.log("Caminho absoluto gerado:", absolutePath); // Log para caminho absoluto
+
+    // Tentando carregar o arquivo
     fetch(filePath)
         .then(response => {
             if (!response.ok) {
@@ -334,11 +343,14 @@
     }
 
     function getLevelAndUnitFromURL() {
-        const url = window.location.pathname.split('/');
-        const level = url[1];
-        const unit = url[2];
-        return { level, unit };
-    }
+    const params = new URLSearchParams(window.location.search);
+    const level = params.get('level');
+    const unit = params.get('unit');
+    
+    console.log("getLevelAndUnitFromURL - Level:", level, "Unit:", unit); // Log para verificar se os parâmetros estão corretos
+
+    return { level, unit };
+}
 
     function generatePDF() {
         fetch(`../../${getLevelAndUnitFromURL().level}/${getLevelAndUnitFromURL().unit}/DataGrammar/texto.txt`)
