--- a/Atividades/Grammar/index.html
+++ b/Atividades/Grammar/index.html
@@ -394,31 +394,41 @@
             .catch(error => console.error('Error generating the PDF:', error));
     }
 
-    function loadProfessorButtons() {
-        const buttonContainer = document.querySelector('.button-container');
-        const maxProfessors = 10;
+   function loadProfessorButtons() {
+    const buttonContainer = document.querySelector('.button-container');
+    const maxProfessors = 10;
 
-        for (let i = 1; i <= maxProfessors; i++) {
-            const imgPath = `professores/professor${i}.png`;
-            const img = new Image();
-            
-            img.onload = function() {
-                const button = document.createElement('button');
-                img.alt = `Professor ${i}`;
-                button.appendChild(img);
-                button.onclick = function() {
-                    window.location.href = `aulas/aula${i}/index.html`;
-                };
-                buttonContainer.appendChild(button);
+    // Gerar os botões dos professores
+    for (let i = 1; i <= maxProfessors; i++) {
+        const imgPath = `professores/professor${i}.png`;
+        const img = new Image();
+        
+        img.onload = function() {
+            const button = document.createElement('button');
+            img.alt = `Professor ${i}`;
+            button.appendChild(img);
+
+            // Caminho dinâmico para a aula
+            const { level, unit } = getLevelAndUnitFromURL();
+            const lessonPath = `../../${level}/${unit}/DataGrammar/aulas/aula${i}/index.html`;
+
+            // Log para verificar o caminho gerado
+            console.log(`Caminho gerado para a aula ${i}: ${lessonPath}`);
+
+            button.onclick = function() {
+                window.location.href = lessonPath;
             };
 
-            img.onerror = function() {
-                console.log(`Imagem professor${i}.png não encontrada, pulando.`);
-            };
+            buttonContainer.appendChild(button);
+        };
 
-            img.src = imgPath;
-        }
+        img.onerror = function() {
+            console.log(`Imagem professor${i}.png não encontrada, pulando.`);
+        };
+
+        img.src = imgPath;
     }
+}
 
     document.addEventListener('DOMContentLoaded', function() {
         loadTextFile();
