--- a/Atividades/Grammar/index - Copy.html
+++ b/Atividades/Grammar/index - Copy.html
@@ -130,49 +130,12 @@
             background-color: #f0f0f0;
             box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.2);
         }
-
- /* Estilo do Modal */
-        .modal {
-            display: none;
-            position: fixed;
-            z-index: 1;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            overflow: auto;
-            background-color: rgba(0, 0, 0, 0.5);
-            padding-top: 60px;
-        }
-
-        .modal-content {
-            background-color: white;
-            margin: 5% auto;
-            padding: 20px;
-            border-radius: 5px;
-            width: 80%;
-            text-align: center;
-        }
-
-        .close {
-            color: #aaa;
-            float: right;
-            font-size: 28px;
-            font-weight: bold;
-        }
-
-        .close:hover,
-        .close:focus {
-            color: black;
-            text-decoration: none;
-            cursor: pointer;
-        }
     </style>
 </head>
 <body>
 
 <div class="container">
-    <a href="javascript:void(0);" class="back-button" onclick="goBack()">Back</a>
+  <a href="javascript:void(0);" class="back-button" onclick="goBack()">Back</a>
     <h1 id="title">Loading title...</h1>
     
     <div class="image-container">
@@ -188,15 +151,6 @@
     </div>
 
     <button class="btn-download" onclick="generatePDF()">Download as PDF</button>
-</div>
-
-<!-- Modal de Conclusão -->
-<div id="completionModal" class="modal">
-    <div class="modal-content">
-        <span class="close" onclick="closeModal()">&times;</span>
-        <h2>Congratulations!</h2>
-        <p>You have successfully completed this activity. Well done!</p>
-    </div>
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
@@ -348,11 +302,8 @@
     }
 
     function markActivityAsCompleted() {
-        if (!alertDisplayed) {
-            alert('Congratulations! You have completed the activity.');
-            alertDisplayed = true;
-            showCompletionModal(); // Show modal after completion
-        }
+        console.log("Atividade concluída!");
+        ensureUserIsAuthenticated(updateNextPhase);
     }
 
     function ensureUserIsAuthenticated(callback) {
@@ -364,10 +315,6 @@
             }
         });
     }
-
-function showCompletionModal() {
-        const modal = document.getElementById("completionModal");
-        modal.style.display = "block";
 
 // Função de navegação com verificação da próxima fase
 function goBack() {
@@ -403,12 +350,6 @@ function goBack() {
     });
 }
 
-function closeModal() {
-        const modal = document.getElementById("completionModal");
-        modal.style.display = "none";
-        updateNextPhase();
-    }
-
     async function updateNextPhase(userId) {
         const currentPhase = getPhaseFromURL();
         const { level, unit } = getLevelAndUnitFromURL();
@@ -433,13 +374,6 @@ function closeModal() {
     function getPhaseFromURL() {
         const params = new URLSearchParams(window.location.search);
         return params.get('fase');
-    }
-
-  function updateNextPhase() {
-        const userId = firebase.auth().currentUser ? firebase.auth().currentUser.uid : null;
-        if (userId) {
-            const dbRef = firebase.database().ref(`users/${userId}/progress`);
-            dbRef.update({ phase: "next" });        
     }
 
     function getLevelAndUnitFromURL() {
