--- a/Atividades/Grammar/index.html
+++ b/Atividades/Grammar/index.html
@@ -348,31 +348,36 @@ document.addEventListener('DOMContentLoaded', function() {
             .catch(error => console.error('Error generating the PDF:', error));
     }
 
-    function loadProfessorButtons() {
-        const buttonContainer = document.querySelector('.button-container');
-        const maxProfessors = 10;
+   function loadProfessorButtons() {
+    const buttonContainer = document.querySelector('.button-container');
+    const maxProfessors = 10;
 
-        for (let i = 1; i <= maxProfessors; i++) {
-            const imgPath = `professores/professor${i}.png`;
-            const img = new Image();
-            
-            img.onload = function() {
-                const button = document.createElement('button');
-                img.alt = `Professor ${i}`;
-                button.appendChild(img);
-                button.onclick = function() {
-                    window.location.href = `aulas/aula${i}/index.html`;
-                };
-                buttonContainer.appendChild(button);
+    // Obtém o level e unit da URL
+    const { level, unit } = getLevelAndUnitFromURL();
+
+    for (let i = 1; i <= maxProfessors; i++) {
+        const imgPath = `professores/professor${i}.png`;
+        const img = new Image();
+        
+        img.onload = function() {
+            const button = document.createElement('button');
+            img.alt = `Professor ${i}`;
+            button.appendChild(img);
+            button.onclick = function() {
+                // Monta o caminho dinâmico para a aula do professor
+                const lessonPath = `../../${level}/${unit}/DataGrammar/aulas/aula${i}/index.html`;
+                window.location.href = lessonPath;  // Navega para o caminho correto
             };
+            buttonContainer.appendChild(button);
+        };
 
-            img.onerror = function() {
-                console.log(`Imagem professor${i}.png não encontrada, pulando.`);
-            };
+        img.onerror = function() {
+            console.log(`Imagem professor${i}.png não encontrada, pulando.`);
+        };
 
-            img.src = imgPath;
-        }
+        img.src = imgPath;
     }
+}
 
     document.addEventListener('DOMContentLoaded', function() {
         loadTextFile();
