--- a/Atividades/Grammar/index.html
+++ b/Atividades/Grammar/index.html
@@ -203,6 +203,10 @@
                     }
                     currentSection = line.replace('# ', '');
                     htmlContent += `<div class="section"><h2>${currentSection}</h2>`;
+                } else if (line.includes('___')) {
+                    // Substituir espaços em branco por campos de entrada (input)
+                    const questionText = line.replace('___', '<input type="text" class="answer-input" placeholder="Type here..." />');
+                    htmlContent += `<p>${questionText}</p>`;
                 } else if (line.includes('[Answer:')) {
                     const [question, answer] = line.split('[Answer:');
                     const cleanedAnswer = answer.replace(']', '').trim();
