--- a/Atividades/Grammar/index.html
+++ b/Atividades/Grammar/index.html
@@ -115,6 +115,14 @@
             color: #007bff;
             margin-left: 10px;
         }
+.answer-input {
+    width: 100px;
+    padding: 5px;
+    margin-left: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 1rem;
+}
         .show-answer-btn {
             padding: 8px 15px;
             background-color: white;
@@ -206,7 +214,7 @@
                 } else if (line.includes('___')) {
                     // Substituir espaços em branco por campos de entrada (input)
                     const questionText = line.replace('___', '<input type="text" class="answer-input" placeholder="Type here..." />');
-                    htmlContent += `<p>${questionText}</p>`;
+                    htmlContent += `<p>${questionText} <button class="show-answer-btn" onclick="handleAnswerClick(this)">Answer</button><span class="answer" style="display:none;">${getAnswerFromLine(line)}</span></p>`;
                 } else if (line.includes('[Answer:')) {
                     const [question, answer] = line.split('[Answer:');
                     const cleanedAnswer = answer.replace(']', '').trim();
@@ -222,6 +230,12 @@
         .catch(error => {
             console.error('Erro ao carregar o arquivo de texto:', error);
         });
+}
+
+function getAnswerFromLine(line) {
+    // Extrai a resposta de uma linha de texto que contém '[Answer:'
+    const match = line.match(/\[Answer:(.*?)\]/);
+    return match ? match[1].trim() : '';
 }
 
 function loadLessonContent() {
