--- a/Atividades/Grammar/index.html
+++ b/Atividades/Grammar/index.html
@@ -122,22 +122,25 @@
     border: 1px solid #ccc;
     border-radius: 5px;
     font-size: 1rem;
+    transition: background-color 0.3s ease; /* Animação de transição de cor */
 }
-        .show-answer-btn {
-            padding: 8px 15px;
-            background-color: white;
-            color: black;
-            border: 1px solid #ccc;
-            border-radius: 20px;
-            cursor: pointer;
-            font-size: 1rem;
-            transition: background-color 0.3s ease, box-shadow 0.3s ease;
-            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
-        }
-        .show-answer-btn:hover {
-            background-color: #f0f0f0;
-            box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.2);
-        }
+
+.show-answer-btn {
+    padding: 8px 15px;
+    background-color: white;
+    color: black;
+    border: 1px solid #ccc;
+    border-radius: 20px;
+    cursor: pointer;
+    font-size: 1rem;
+    transition: background-color 0.3s ease, box-shadow 0.3s ease;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.show-answer-btn:hover {
+    background-color: #f0f0f0;
+    box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.2);
+}
     </style>
 </head>
 <body>
@@ -260,16 +263,28 @@ function loadLessonContent() {
 }
 
     function handleAnswerClick(button) {
-        const answerElement = button.nextElementSibling;
-        if (answerElement.style.display === 'none') {
-            answerElement.style.display = 'inline';
-            clickedAnswers++;
+    const answerElement = button.nextElementSibling; // Pega o span da resposta
+    const userInput = button.previousElementSibling; // Pega o campo de entrada
+    const correctAnswer = answerElement.textContent.trim(); // Resposta correta extraída do texto
+    
+    if (userInput.value.trim().toLowerCase() === correctAnswer.toLowerCase()) {
+        // Se a resposta do usuário estiver correta
+        userInput.style.backgroundColor = 'lightblue';
+    } else {
+        // Se a resposta do usuário estiver errada
+        userInput.style.backgroundColor = 'lightcoral';
+    }
 
-            if (clickedAnswers === totalAnswers) {
-                markActivityAsCompleted();
-            }
+    // Mostrar a resposta correta ao clicar no botão
+    if (answerElement.style.display === 'none') {
+        answerElement.style.display = 'inline';
+        clickedAnswers++;
+
+        if (clickedAnswers === totalAnswers) {
+            markActivityAsCompleted();
         }
     }
+}
 
     function markActivityAsCompleted() {
         console.log("Atividade concluída!");
