--- a/Atividades/Grammar/index.html
+++ b/Atividades/Grammar/index.html
@@ -188,7 +188,7 @@
     let totalAnswers = 0;
     let clickedAnswers = 0;
 
-    function loadTextFile() {
+  function loadTextFile() {
     const { level, unit } = getLevelAndUnitFromURL();
     const filePath = `../../${level}/${unit}/DataGrammar/texto.txt`;
 
@@ -238,7 +238,7 @@
 function getAnswerFromLine(line) {
     // Extrai a resposta de uma linha de texto que contém '[Answer:'
     const match = line.match(/\[Answer:(.*?)\]/);
-    return match ? match[1].trim() : '';
+    return match ? match[1].trim() : '';  // Retorna apenas a resposta sem exibir no texto
 }
 
 function loadLessonContent() {
@@ -262,7 +262,7 @@ function loadLessonContent() {
         });
 }
 
-    function handleAnswerClick(button) {
+ function handleAnswerClick(button) {
     const answerElement = button.nextElementSibling; // Pega o span da resposta
     const userInput = button.previousElementSibling; // Pega o campo de entrada
     const correctAnswer = answerElement.textContent.trim(); // Resposta correta extraída do texto
