--- a/Atividades/Grammar/index.html
+++ b/Atividades/Grammar/index.html
@@ -216,13 +216,9 @@
                     htmlContent += `<div class="section"><h2>${currentSection}</h2>`;
                 } else if (line.includes('___')) {
                     // Substituir espaços em branco por campos de entrada (input)
-                    const questionText = line.replace('___', '<input type="text" class="answer-input" placeholder="Type here..." />');
-                    htmlContent += `<p>${questionText} <button class="show-answer-btn" onclick="handleAnswerClick(this)">Answer</button><span class="answer" style="display:none;">${getAnswerFromLine(line)}</span></p>`;
-                } else if (line.includes('[Answer:')) {
-                    const [question, answer] = line.split('[Answer:');
-                    const cleanedAnswer = answer.replace(']', '').trim();
-                    htmlContent += `<p>${question.trim()} <button class="show-answer-btn" onclick="handleAnswerClick(this)">Answer</button><span class="answer" style="display:none;">${cleanedAnswer}</span></p>`;
-                    totalAnswers++;
+                    const answer = getAnswerFromLine(line); // Extrai a resposta
+                    const questionText = line.replace(/___(\[Answer:.*?\])?/, '<input type="text" class="answer-input" placeholder="Type here..." />');
+                    htmlContent += `<p>${questionText} <button class="show-answer-btn" data-answer="${answer}" onclick="handleAnswerClick(this)">Answer</button></p>`;
                 } else {
                     htmlContent += `<p>${line}</p>`;
                 }
@@ -236,9 +232,9 @@
 }
 
 function getAnswerFromLine(line) {
-    // Extrai a resposta de uma linha de texto que contém '[Answer:'
+    // Extrai a resposta de uma linha de texto que contém '[Answer:...]'
     const match = line.match(/\[Answer:(.*?)\]/);
-    return match ? match[1].trim() : '';  // Retorna apenas a resposta sem exibir no texto
+    return match ? match[1].trim() : '';
 }
 
 function loadLessonContent() {
@@ -263,9 +259,8 @@ function loadLessonContent() {
 }
 
  function handleAnswerClick(button) {
-    const answerElement = button.nextElementSibling; // Pega o span da resposta
     const userInput = button.previousElementSibling; // Pega o campo de entrada
-    const correctAnswer = answerElement.textContent.trim(); // Resposta correta extraída do texto
+    const correctAnswer = button.getAttribute('data-answer'); // Obtém a resposta correta do atributo data-answer
     
     if (userInput.value.trim().toLowerCase() === correctAnswer.toLowerCase()) {
         // Se a resposta do usuário estiver correta
@@ -275,15 +270,9 @@ function loadLessonContent() {
         userInput.style.backgroundColor = 'lightcoral';
     }
 
-    // Mostrar a resposta correta ao clicar no botão
-    if (answerElement.style.display === 'none') {
-        answerElement.style.display = 'inline';
-        clickedAnswers++;
-
-        if (clickedAnswers === totalAnswers) {
-            markActivityAsCompleted();
-        }
-    }
+    // Exibir a resposta correta no botão (opcional, dependendo do design)
+    button.innerText = `Correct Answer: ${correctAnswer}`;
+    button.disabled = true; // Desabilita o botão após a resposta ser exibida
 }
 
     function markActivityAsCompleted() {
