--- a/Atividades/Grammar/index.html
+++ b/Atividades/Grammar/index.html
@@ -261,18 +261,23 @@ function loadLessonContent() {
  function handleAnswerClick(button) {
     const userInput = button.previousElementSibling; // Pega o campo de entrada
     const correctAnswer = button.getAttribute('data-answer'); // Obtém a resposta correta do atributo data-answer
-    
-    if (userInput.value.trim().toLowerCase() === correctAnswer.toLowerCase()) {
-        // Se a resposta do usuário estiver correta
-        userInput.style.backgroundColor = 'lightblue';
-    } else {
-        // Se a resposta do usuário estiver errada
-        userInput.style.backgroundColor = 'lightcoral';
-    }
 
-    // Exibir a resposta correta no botão (opcional, dependendo do design)
-    button.innerText = `Correct Answer: ${correctAnswer}`;
-    button.disabled = true; // Desabilita o botão após a resposta ser exibida
+    // Verificar se o usuário já inseriu uma resposta
+    if (userInput.value.trim() !== "") {
+        // Se a resposta do usuário estiver correta
+        if (userInput.value.trim().toLowerCase() === correctAnswer.toLowerCase()) {
+            userInput.style.backgroundColor = 'lightblue'; // Resposta correta
+        } else {
+            userInput.style.backgroundColor = 'lightcoral'; // Resposta errada
+        }
+
+        // Exibir a resposta correta no botão (opcional, dependendo do design)
+        button.innerText = `Correct Answer: ${correctAnswer}`;
+        button.disabled = true; // Desabilita o botão após a resposta ser exibida
+    } else {
+        // Caso o usuário não tenha inserido nada, você pode mostrar uma mensagem de aviso ou deixar o botão inativo
+        alert("Please type an answer before clicking 'Answer'.");
+    }
 }
 
     function markActivityAsCompleted() {
