--- a/Atividades/Grammar/index.html
+++ b/Atividades/Grammar/index.html
@@ -188,7 +188,7 @@
     let totalAnswers = 0;
     let clickedAnswers = 0;
 
-  function loadTextFile() {
+ function loadTextFile() {
     const { level, unit } = getLevelAndUnitFromURL();
     const filePath = `../../${level}/${unit}/DataGrammar/texto.txt`;
 
@@ -216,9 +216,12 @@
                     htmlContent += `<div class="section"><h2>${currentSection}</h2>`;
                 } else if (line.includes('___')) {
                     // Substituir espaços em branco por campos de entrada (input)
-                    const answer = getAnswerFromLine(line); // Extrai a resposta
-                    const questionText = line.replace(/___(\[Answer:.*?\])?/, '<input type="text" class="answer-input" placeholder="Type here..." />');
-                    htmlContent += `<p>${questionText} <button class="show-answer-btn" data-answer="${answer}" onclick="handleAnswerClick(this)">Answer</button></p>`;
+                    const questionText = line.replace('___', '<input type="text" class="answer-input" placeholder="Type here..." />');
+                    htmlContent += `<p>${questionText} <button class="show-answer-btn" onclick="handleAnswerClick(this)">Answer</button><span class="answer" style="display:none;" data-answer="${getAnswerFromLine(line)}"></span></p>`;
+                } else if (line.includes('[Answer:')) {
+                    const [question, answer] = line.split('[Answer:');
+                    const cleanedAnswer = answer.replace(']', '').trim();
+                    htmlContent += `<p>${question.trim()} <button class="show-answer-btn" onclick="handleAnswerClick(this)">Answer</button><span class="answer" style="display:none;" data-answer="${cleanedAnswer}"></span></p>`;
                 } else {
                     htmlContent += `<p>${line}</p>`;
                 }
@@ -260,7 +263,7 @@ function loadLessonContent() {
 
  function handleAnswerClick(button) {
     const userInput = button.previousElementSibling; // Pega o campo de entrada
-    const correctAnswer = button.getAttribute('data-answer'); // Obtém a resposta correta do atributo data-answer
+    const correctAnswer = button.nextElementSibling.getAttribute('data-answer'); // Obtém a resposta correta
 
     // Verificar se o usuário já inseriu uma resposta
     if (userInput.value.trim() !== "") {
