--- a/Atividades/Grammar/index.html
+++ b/Atividades/Grammar/index.html
@@ -261,7 +261,7 @@ function loadLessonContent() {
         });
 }
 
- function handleAnswerClick(button) {
+function handleAnswerClick(button) {
     const userInput = button.previousElementSibling; // Pega o campo de entrada
     const correctAnswer = button.nextElementSibling.getAttribute('data-answer'); // Obtém a resposta correta
 
@@ -274,11 +274,16 @@ function loadLessonContent() {
             userInput.style.backgroundColor = 'lightcoral'; // Resposta errada
         }
 
-        // Exibir a resposta correta no botão (opcional, dependendo do design)
+        // Exibir a resposta correta no botão
         button.innerText = `Correct Answer: ${correctAnswer}`;
+
+        // Desabilitar o botão após a resposta ser exibida
         button.disabled = true; // Desabilita o botão após a resposta ser exibida
+
+        // Exibir a resposta correta (opcional)
+        button.nextElementSibling.style.display = 'inline'; // Torna o <span> visível
     } else {
-        // Caso o usuário não tenha inserido nada, você pode mostrar uma mensagem de aviso ou deixar o botão inativo
+        // Caso o usuário não tenha inserido nada, você pode mostrar uma mensagem de aviso
         alert("Please type an answer before clicking 'Answer'.");
     }
 }
